Associate user skill after creating skill
